[gd_scene load_steps=2 format=3 uid="uid://b6pwxuklmxqxf"]

[ext_resource type="Script" uid="uid://cadh1n1g4w666" path="res://scenes/components/hitbox.gd" id="1_2otwd"]

[node name="Hitbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_2otwd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
